Fixeando visibilidad del formulario e imagenes de botones

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -15,6 +15,8 @@ html{
     height: 100%;
 }
 body{
+    width: 100%;
+    box-sizing: border-box;
     position: relative;
     min-height: 100vh;
 }
@@ -201,6 +203,7 @@ canvas{
     font-size: 18px;
     border-radius: 50px;
     background-image: url(/img/oeste.jpg);
+    background-image: url(img/oeste.jpg);
     border: 2px solid black;
     color: white;
     font-weight: bolder;
@@ -240,6 +243,7 @@ canvas{
 
 .btn-iniciar, .btn-agregar{
     background-image: url(/img/oeste.jpg);
+    background-image: url(img/oeste.jpg);
     width: 20%;
     height: 4rem;
     margin: 10px;
@@ -317,6 +321,7 @@ canvas{
     font-size: 18px;
     font-weight: bolder;
     background-image: url(/img/oeste.jpg);
+    background-image: url(img/oeste.jpg);
     cursor: pointer;
 }
 
@@ -337,6 +342,10 @@ canvas{
 
 .ocultar{
     display: none;
+
+}
+.ocultar2{
+    visibility: hidden;
 }
 
 .ocultarOpaco{
